Implementate anche le funzione di add remove e update al DB con relativo controllo di buon riuscita della query